# phatsurf

./: .codeql.json  .codeqlignore  .coveragerc  .gitattributes  .gitignore  .gitmodules  .safety-project.ini  .snyk  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  codeql-workspace.yml  docker-compose.override_dev.yml  docker-compose.yml  pyproject.toml  renovate.json  requirements.txt  run.py  sonar-project.properties  tox.ini
.github/: dependabot.yml
.github/codeql/extensions/codeql-db-python/: codeql-pack.yml
.github/workflows/: snyk.yml  sonarcloud.yml
.sonarlint/: connectedMode.json
app/: __init__.py  config.py  extensions.py  models.py  routes.py
app/templates/: dashboard.html  index.html  login.html  register.html
tests/: __init__.py  conftest.py  test___init__.py  test_config.py  test_extensions.py  test_models.py  test_routes.py  test_run.py
