[tool.poetry]
name = "phatsurf"
version = "0.1.0"
description = "\"A containerized web app for surfboard recommendations based on user data and historical surf conditions.\""
authors = ["Kristian Peacocke <krpeacocke@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
blinker = "1.9.0"
click = "8.1.7"
colorama = "0.4.6"
coverage = "7.6.8"
dnspython = "2.7.0"
flask = "3.1.0"
flask-pymongo = "2.3.0"
iniconfig = "2.0.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
markupsafe = "3.0.2"
packaging = "24.2"
pluggy = "1.5.0"
pymongo = "4.10.1"
pytest = "8.3.3"
pytest-cov = "6.0.0"
python-dotenv = "1.0.1"
werkzeug = "3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
